修改基本数据类型的构造实现